chore: release v1.2.0-rc1 with common rc4
